--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -1,1 +1,16 @@
 zh-TW:
+  frontend:
+    nav:
+      portfolios:
+      about-us:
+    # contact:
+    #   mr:
+    #   ms:
+    #   name:
+    #   number:
+    #   email:
+    #   message:  
+    # buttons:
+    #   submit:
+    #   learnmore:
+    #   enter:
