--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,16 +1,20 @@
+---
 en:
   frontend:
     nav:
-      portfolios:
-      about-us:
-    # contact:
-    #   mr:
-    #   ms:
-    #   name:
-    #   number:
-    #   email:
-    #   message:  
-    # buttons:
-    #   submit:
-    #   learnmore:
-    #   enter:
+      portfolios: Portfolios
+      about-us: About AMF
+    contact:
+      prefix: Prefix
+      mr: Mr.
+      ms: Ms.
+      first_name: First Name
+      last_name: Last Name
+      number: Number
+      email: Email
+      subject: Subject
+      message: Message
+    buttons:
+      submit: SUBMIT
+      learnmore: LEARN MORE
+      enter: ENTER
