--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -1,16 +1,20 @@
+---
 zh-TW:
   frontend:
     nav:
-      portfolios:
-      about-us:
-    # contact:
-    #   mr:
-    #   ms:
-    #   name:
-    #   number:
-    #   email:
-    #   message:  
-    # buttons:
-    #   submit:
-    #   learnmore:
-    #   enter:
+      portfolios: 作品集
+      about-us: 關於AMF
+    contact:
+      prefix: 稱謂
+      mr: 先生
+      ms: 女士
+      first_name: 名
+      last_name: 姓
+      number: 電話
+      email: Email
+      subject: 訊息標題
+      message: 訊息內容
+    buttons:
+      submit: 確認送出
+      learnmore: 瞭解更多
+      enter: 點擊進入
